--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
       type="text/javascript"
       src="https://cdn.fusionix.app/javascript/3a862279-83c7-448f-9901-20f1490c1461.js"
     ></script>
+    <script>
+      window.postMessage({"foo":"bar"})
+    </script>
   </body>
 </html>
